@@ -1,5 +1,10 @@
 2008-08-23 Mathieu Blondel <mblondel@svn.gnome.org>
 
+    * test/test_source_base.rb: Added unit test.
+    * lib/fantasdic/source_base.rb: Allow to define :max_cache as an option.
+
+2008-08-23 Mathieu Blondel <mblondel@svn.gnome.org>
+
     * test/test_dict_server.rb: Added unit test.
 
 2008-08-23 Mathieu Blondel <mblondel@svn.gnome.org>
